# group-man

./: CMakeLists.txt  Makefile  README.md  coord  custom.mk  node1  node1.sh  node2  node2.sh
include/: gb-receiver.h  gb-sender.h  node.h  proto-constants.h
protocols/: adv-proto.u  gb-proto.u  gm-proto.u  gmc-proto.u
src/: coordinator.c  gb-receiver.c  gb-sender.c  node.c
test/: node-test.c
